--- a/demo/vo.html
+++ b/demo/vo.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>麦通二期</title>
-    <link rel="stylesheet" href="style/css/module/vo.css"/>
+    <link rel="stylesheet" href="../style/css/module/vo.css"/>
 </head>
 <body>
 
     <!-- S header-->
     <div class="header">
-    header
+
     </div>
     <!-- E header-->
 
@@ -28,7 +28,7 @@
                     <div class="menu-bd">
                         <ul class="menu-lst">
                             <li>
-                                <a href="#">客户对话信息</a>
+                                <a href="user.html">客户对话信息</a>
                             </li>
                         </ul>
                     </div>
@@ -46,20 +46,34 @@
                         <div class="menu-bd">
                             <ul class="menu-lst">
                                 <li>
-                                    <a href="#">对话量</a>
+                                    <a href="data_amount.html">对话量</a>
                                 </li>
                                 <li>
-                                    <a href="#">对话时段</a>
+                                    <a href="data_time.html">对话时段</a>
                                 </li>
                                 <li>
-                                    <a href="#">客户分布</a>
+                                    <a href="data_area.html">客户分布</a>
                                 </li>
                                 <li>
-                                    <a href="#">客户行为</a>
+                                    <a href="data_actor.html">客户行为</a>
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div><!-- /menu-sub -->
+
+                    <div class="menu-sub">
+                        <div class="menu-hd">
+                            客服统计
+                            <i class="iconfont iconfont-arrow-btm"></i>
+                        </div>
+                        <div class="menu-bd">
+                            <ul class="menu-lst">
+                                <li>
+                                    <a href="data_service.html">客服业绩</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!-- /menu-sub -->
 
                 </div><!-- /menu -->
                 <div class="menu">
@@ -70,7 +84,7 @@
                     <div class="menu-bd">
                         <ul class="menu-lst">
                             <li>
-                                <a href="#">链接</a>
+                                <a href="kf.html">客服设置</a>
                             </li>
                         </ul>
                     </div>
