--- a/demo/user_detail.html
+++ b/demo/user_detail.html
@@ -103,7 +103,7 @@
 <div class="main-wrap">
     <div class="main">
         <div class="main-hd">
-            <h2>客户对话信息</h2>
+            <h2>对话记录详情</h2>
         </div>
 
 
