--- a/demo/data_actor.html
+++ b/demo/data_actor.html
@@ -32,7 +32,8 @@
                         </li>
                     </ul>
                 </div>
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
             <div class="menu">
                 <div class="menu-hd">
                     <i class="iconfont iconfont-data"></i>
@@ -59,7 +60,8 @@
                             </li>
                         </ul>
                     </div>
-                </div><!-- /menu-sub -->
+                </div>
+                <!-- /menu-sub -->
 
                 <div class="menu-sub">
                     <div class="menu-hd">
@@ -73,9 +75,11 @@
                             </li>
                         </ul>
                     </div>
-                </div><!-- /menu-sub -->
+                </div>
+                <!-- /menu-sub -->
 
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
             <div class="menu">
                 <div class="menu-hd">
                     <i class="iconfont iconfont-seting"></i>
@@ -88,7 +92,8 @@
                         </li>
                     </ul>
                 </div>
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
         </div>
     </div>
     <!-- S side-wrap-->
@@ -98,16 +103,124 @@
     <div class="main-wrap">
         <div class="main">
             <div class="main-hd">
-                <h2>标题</h2>
+                <h2>客户行为</h2>
+            </div>
+
+
+            <div class="main-bd">
+
+                <!-- S search-->
+                <div class="sch sch-default">
+                    <div class="sch-main">
+                        <ul class="sch-lst">
+                            <li class="sch-item">
+                                <span class="sch-item-tit">日期</span>
+
+                                <div class="sch-item-bd js-item-content">
+                                    <select class="sch-input" name="" id="">
+                                        <option value="">最近30天</option>
+                                    </select>
+                                </div>
+                            </li>
+
+                        </ul>
+                        <div class="sch-btn">
+                            <button type="submit" class="btn btn-s btn-info">查询</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- E search-->
+
+
+
+
+                <ul class="tab tab-primary">
+                    <li class="on"><a href="javascript:void(0)">热门对话入口TOP10</a></li>
+                    <li><a href="javascript:void(0)">热门资讯产品TOP10</a></li>
+                </ul>
+                <div class="tab-con">
+                    <div class="tab-node on">
+                        <table class="tb tb-border">
+                            <colgroup>
+                                <col width="100"/>
+                                <col />
+                                <col width="150"/>
+                            </colgroup>
+                            <tr>
+                                <th>排名</th>
+                                <th>对话入口</th>
+                                <th>
+                                    对话接入次数
+                                    <div class="m-poptip">
+                                        <i class="iconfont iconfont-feedback"></i>
+                                        <div class="poptip poptip-warn">
+                                            <div class="poptip-bd">
+                                                弹出提示框
+                                            </div>
+                                            <span class="poptip-close">×</span>
+                                            <span class="arrow arrow-bottom">
+                                                <span class="arrow arrow-in"></span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td><a href="" target="_blank">www.abiz.com</a></td>
+                                <td>10</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="tab-node">
+                        <table class="tb tb-border">
+                            <colgroup>
+                                <col width="100"/>
+                                <col />
+                                <col width="150"/>
+                            </colgroup>
+                            <tr>
+                                <th>排名</th>
+                                <th>产品明细</th>
+                                <th>
+                                    咨询次数
+                                    <div class="m-poptip">
+                                        <i class="iconfont iconfont-feedback"></i>
+                                        <div class="poptip poptip-warn">
+                                            <div class="poptip-bd">
+                                                弹出提示框
+                                            </div>
+                                            <span class="poptip-close">×</span>
+                                            <span class="arrow arrow-bottom">
+                                                <span class="arrow arrow-in"></span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td class="product">
+                                    <a href="" target="_blank">
+                                        <img src="../img/pic_default.jpg" alt=""/>
+                                        现货供应
+                                    </a>
+                                </td>
+                                <td>10</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+
             </div>
         </div>
+        <!-- S main-wrap-->
+
     </div>
-    <!-- S main-wrap-->
+    <!-- E main-wrap-->
 
 </div>
-<!-- E header-->
-
-
-
+<!-- E content-->
 </body>
 </html>
