--- a/demo/data_amount.html
+++ b/demo/data_amount.html
@@ -160,7 +160,7 @@
                                     消息量
                                 <div class="m-poptip">
                                     <i class="iconfont iconfont-feedback"></i>
-                                    <div class="poptip poptip-warn">
+                                    <div class="poptip poptip-warn" style="display:none;">
                                         <div class="poptip-bd">
                                             弹出提示框
                                             <p>奔放洋气有深度</p>
