--- a/demo/data_area.html
+++ b/demo/data_area.html
@@ -32,7 +32,8 @@
                         </li>
                     </ul>
                 </div>
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
             <div class="menu">
                 <div class="menu-hd">
                     <i class="iconfont iconfont-data"></i>
@@ -59,7 +60,8 @@
                             </li>
                         </ul>
                     </div>
-                </div><!-- /menu-sub -->
+                </div>
+                <!-- /menu-sub -->
 
                 <div class="menu-sub">
                     <div class="menu-hd">
@@ -73,9 +75,11 @@
                             </li>
                         </ul>
                     </div>
-                </div><!-- /menu-sub -->
+                </div>
+                <!-- /menu-sub -->
 
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
             <div class="menu">
                 <div class="menu-hd">
                     <i class="iconfont iconfont-seting"></i>
@@ -88,7 +92,8 @@
                         </li>
                     </ul>
                 </div>
-            </div><!-- /menu -->
+            </div>
+            <!-- /menu -->
         </div>
     </div>
     <!-- S side-wrap-->
@@ -98,16 +103,55 @@
     <div class="main-wrap">
         <div class="main">
             <div class="main-hd">
-                <h2>标题</h2>
+                <h2>客户分布</h2>
+            </div>
+
+
+            <div class="main-bd">
+
+                <!-- S search-->
+                <div class="sch sch-default">
+                    <div class="sch-main">
+                        <ul class="sch-lst">
+                            <li class="sch-item">
+                                <span class="sch-item-tit">日期</span>
+
+                                <div class="sch-item-bd js-item-content">
+                                    <select class="sch-input" name="" id="">
+                                        <option value="">最近30天</option>
+                                    </select>
+                                </div>
+                            </li>
+
+                        </ul>
+                        <div class="sch-btn">
+                            <button type="submit" class="btn btn-s btn-info">查询</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- E search-->
+
+
+
+
+
+                <div class="fold">
+                    <div class="fold-hd"><h3>客户分布</h3></div>
+                    <div class="fold-bd">
+                        <div class="chart">此处有图表</div>
+                    </div>
+                </div>
+                <!-- /fold -->
+
+
             </div>
         </div>
+        <!-- S main-wrap-->
+
     </div>
-    <!-- S main-wrap-->
+    <!-- E main-wrap-->
 
 </div>
-<!-- E header-->
-
-
-
+<!-- E content-->
 </body>
 </html>
